--- a/cluster-config.yaml
+++ b/cluster-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: test-deployment
   labels:
     app: nginx
 spec:
@@ -25,7 +25,7 @@ kind: Service
 metadata:
   labels:
     app: nginx
-  name: nginx
+  name: test-service
 spec:
   ports:
   - name: 80-80
@@ -39,14 +39,14 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx
+  name: test-ingress
 spec:
   rules:
   - http:
       paths:
       - backend:
           service:
-            name: nginx
+            name: test-service
             port:
               number: 80
         path: /
