--- a/cluster-config.yaml
+++ b/cluster-config.yaml
@@ -3,16 +3,16 @@ kind: Deployment
 metadata:
   name: test-deployment
   labels:
-    app: nginx
+    app: test-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: test-app
   template:
     metadata:
       labels:
-        app: nginx
+        app: test-app
     spec:
       containers:
       - name: nginx
@@ -24,7 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: nginx
+    app: test-app
   name: test-service
 spec:
   ports:
@@ -33,7 +33,7 @@ spec:
     protocol: TCP
     targetPort: 80
   selector:
-    app: nginx
+    app: test-app
   type: ClusterIP
 ---
 apiVersion: networking.k8s.io/v1
