--- a/k8s/cluster-config.yaml
+++ b/k8s/cluster-config.yaml
@@ -15,10 +15,10 @@ spec:
         app: test-app
     spec:
       containers:
-      - name: my-container
-        image: nginx
+      - name: {{DOCKER_IMAGE}}
+        image: {{K3D_REGISTRY}}:{{DOCKER_REGISTRY_PORT}}/{{DOCKER_IMAGE}}
         ports:
-        - containerPort: 80
+        - containerPort: 8000
 ---
 apiVersion: v1
 kind: Service
@@ -28,10 +28,10 @@ metadata:
   name: test-service
 spec:
   ports:
-  - name: 80-80
+  - name: 80-8000
     port: 80
     protocol: TCP
-    targetPort: 80
+    targetPort: 8000
   selector:
     app: test-app
   type: ClusterIP
