--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+redis = {version = "0.21", features = ["aio", "tokio-comp"]}
+thiserror = "1.0"
 tokio = {version = "1.20", features = ["macros", "rt-multi-thread"]}
 warp = "0.3"
