--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1"
 futures = "0.3"
 redis = {version = "0.21", features = ["aio", "tokio-comp"]}
 thiserror = "1.0"
