--- a/chat-client/Cargo.toml
+++ b/chat-client/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0"
 async-trait = "0.1"
 futures = "0.3"
 redis = {version = "0.21", features = ["aio", "tokio-comp"]}
+stream-cancel = "0.8"
 thiserror = "1.0"
 tokio = {version = "1.20", features = ["macros", "rt-multi-thread"]}
 warp = "0.3"
