Use helm and a template to run the cluster

--- a/k8s/helm/chat-cluster/templates/cluster_config.yaml
+++ b/k8s/helm/chat-cluster/templates/cluster_config.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: chat-client
-        image: mycluster-registry:8050/chat-client
+        image: mycluster-registry:8050/{{ .Values.ChatClientDockerTag }}
         ports:
         - containerPort: 8000
 ---
