--- a/k8s/helm/chat-cluster/templates/cluster_config.yaml
+++ b/k8s/helm/chat-cluster/templates/cluster_config.yaml
@@ -40,7 +40,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: message-broker--deployment
+  name: message-broker-deployment
   labels:
     app: message-broker
 spec:
@@ -79,14 +79,28 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: chat-client-ingress
+  annotations:
+    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
 spec:
   rules:
   - http:
       paths:
-      - backend:
+      - path: /chat-client
+        pathType: Prefix
+        backend:
           service:
             name: chat-client-service
             port:
               number: 80
-        path: /
-        pathType: Prefix
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: strip-prefix
+spec:
+  #stripPrefixRegex:
+  #  regex:
+  #  - ^/[^/]+
+  stripPrefix:
+    prefixes:
+      - /chat-client
