Make it explicit that we're using traefik middleware

--- a/k8s/helm/chat-cluster/templates/cluster_config.yaml
+++ b/k8s/helm/chat-cluster/templates/cluster_config.yaml
@@ -80,6 +80,7 @@ kind: Ingress
 metadata:
   name: chat-client-ingress
   annotations:
+    kubernetes.io/ingress.class: traefik
     traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
 spec:
   rules:
