--- a/rust-workspace/binaries/replication-log/Cargo.toml
+++ b/rust-workspace/binaries/replication-log/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 #TODO prune dependencies
 [dependencies]
-common = { path = "../common/" }
+common = { path = "../../crates//common" }
 
 anyhow = "1.0"
 async-trait = "0.1"
