--- a/rust-workspace/Cargo.toml
+++ b/rust-workspace/Cargo.toml
@@ -1,2 +1,10 @@
 [workspace]
 members = ["binaries/*", "crates/*"]
+
+[workspace.dependencies]
+anyhow = "1.0"
+insta = "1.18"
+futures = "0.3"
+redis = { version = "0.21", features = ["aio", "tokio-comp"] }
+tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
+warp = "0.3"
