--- a/rust-workspace/binaries/replication-log/Cargo.toml
+++ b/rust-workspace/binaries/replication-log/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2021"
 [dependencies]
 common = { path = "../../crates//common" }
 
-anyhow = "1.0"
-futures = "0.3"
-redis = { version = "0.21", features = ["aio", "tokio-comp"] }
-tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
-warp = "0.3"
+anyhow = { workspace = true }
+futures = { workspace = true }
+redis = { workspace = true }
+tokio = { workspace = true }
+warp = { workspace = true }
 
 [dev-dependencies]
-insta = "1.18"
+insta = { workspace = true }
