Serialize replication-log messages as json

--- a/rust-workspace/crates/common/Cargo.toml
+++ b/rust-workspace/crates/common/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 anyhow = { workspace = true }
 futures = { workspace = true }
 redis = { workspace = true }
+serde = { workspace = true }
 stream-cancel = "0.8"
 tokio = { workspace = true }
