--- a/rust-workspace/Cargo.toml
+++ b/rust-workspace/Cargo.toml
@@ -6,5 +6,7 @@ anyhow = "1.0"
 insta = "1.18"
 futures = "0.3"
 redis = { version = "0.21", features = ["aio", "tokio-comp"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
 warp = "0.3"
