--- a/rust-workspace/binaries/replication-log/Cargo.toml
+++ b/rust-workspace/binaries/replication-log/Cargo.toml
@@ -13,6 +13,7 @@ futures = { workspace = true }
 redis = { workspace = true }
 tokio = { workspace = true }
 warp = { workspace = true }
+serde_json = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true }
