--- a/k8s/helm/chat-cluster/templates/chat-server.yaml
+++ b/k8s/helm/chat-cluster/templates/chat-server.yaml
@@ -2,22 +2,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: chat-client-deployment
+  name: chat-server-deployment
   labels:
-    app: chat-client
+    app: chat-server
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: chat-client
+      app: chat-server
   template:
     metadata:
       labels:
-        app: chat-client
+        app: chat-server
     spec:
       containers:
-      - name: chat-client
-        image: mycluster-registry:8050/{{ .Values.ChatClientDockerTag }}
+      - name: chat-server
+        image: mycluster-registry:8050/{{ .Values.ChatServerDockerTag }}
         ports:
         - containerPort: 8000
 ---
@@ -25,8 +25,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: chat-client
-  name: chat-client-service
+    app: chat-server
+  name: chat-server-service
 spec:
   ports:
   - name: 80-8000
@@ -34,5 +34,5 @@ spec:
     protocol: TCP
     targetPort: 8000
   selector:
-    app: chat-client
+    app: chat-server
   type: ClusterIP
