--- a/rust-workspace/binaries/chat-server/Cargo.toml
+++ b/rust-workspace/binaries/chat-server/Cargo.toml
@@ -13,7 +13,7 @@ async-trait = "0.1"
 dashmap = "5.3"
 futures = { workspace = true }
 redis = { workspace = true }
-reqwest = "0.11"
+reqwest = { version = "0.11", default-features = false }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 warp = { workspace = true }
